; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/crypto/extr_algapi.c_crypto_destroy_instance.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/crypto/extr_algapi.c_crypto_destroy_instance.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.crypto_alg = type { i32 }
%struct.crypto_instance = type { %struct.crypto_template* }
%struct.crypto_template = type { i32 (%struct.crypto_instance.0*)* }
%struct.crypto_instance.0 = type opaque

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.crypto_alg*)* @crypto_destroy_instance to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @crypto_destroy_instance(%struct.crypto_alg* %0) #0 {
  %2 = alloca %struct.crypto_alg*, align 8
  %3 = alloca %struct.crypto_instance*, align 8
  %4 = alloca %struct.crypto_template*, align 8
  store %struct.crypto_alg* %0, %struct.crypto_alg** %2, align 8
  %5 = load %struct.crypto_alg*, %struct.crypto_alg** %2, align 8
  %6 = bitcast %struct.crypto_alg* %5 to i8*
  %7 = bitcast i8* %6 to %struct.crypto_instance*
  store %struct.crypto_instance* %7, %struct.crypto_instance** %3, align 8
  %8 = load %struct.crypto_instance*, %struct.crypto_instance** %3, align 8
  %9 = getelementptr inbounds %struct.crypto_instance, %struct.crypto_instance* %8, i32 0, i32 0
  %10 = load %struct.crypto_template*, %struct.crypto_template** %9, align 8
  store %struct.crypto_template* %10, %struct.crypto_template** %4, align 8
  %11 = load %struct.crypto_template*, %struct.crypto_template** %4, align 8
  %12 = getelementptr inbounds %struct.crypto_template, %struct.crypto_template* %11, i32 0, i32 0
  %13 = load i32 (%struct.crypto_instance.0*)*, i32 (%struct.crypto_instance.0*)** %12, align 8
  %14 = load %struct.crypto_instance*, %struct.crypto_instance** %3, align 8
  %15 = bitcast %struct.crypto_instance* %14 to %struct.crypto_instance.0*
  %16 = call i32 %13(%struct.crypto_instance.0* %15)
  %17 = load %struct.crypto_template*, %struct.crypto_template** %4, align 8
  %18 = call i32 @crypto_tmpl_put(%struct.crypto_template* %17)
  ret void
}

declare dso_local i32 @crypto_tmpl_put(%struct.crypto_template*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
